# TestAutomation

./: .gitignore  Jenkinsfile  README.md  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: expiry.py  shortcode.py
app/db/: models.py  repository.py  session.py
app/schemas/: url.py
ci/: Dockerfile.jenkins  configure-shared-library.groovy  docker-compose.yml  jenkins-job-url-shortener-ci.xml  jenkins-job-url-shortener-mb.xml  plugins.txt
docs/img/: README.md
jenkins/shared-library/: README.md
jenkins/shared-library/vars/: pythonCI.groovy
markdown/: 00overview.md  01phase0_target_app.md  02phase1jenkins_setup.md  03phase2basic_pipeline.md  04phase3quality_gates.md  05phase4_reporting.md  06phase5triggers.md  07phase6advanced.md
tests/: conftest.py
tests/api/: test_endpoints.py
tests/integration/: test_repository.py
tests/unit/: test_expiry.py  test_shortcode.py
