[project]
name = "url-shortener-ci"
version = "0.1.0"
description = "Jenkins 테스트 자동화 파이프라인의 검증 대상(SUT) — FastAPI URL 단축 서비스"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "hypothesis>=6.100",
    "allure-pytest>=2.13",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.api", "app.core", "app.db", "app.schemas"]

# --- 설정 일원화 (00overview.md §6 규칙) ---

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI는 의존성 주입을 인자 기본값(Depends(...))으로 선언하는 것이 관용적이다.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests/"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "unit: 순수 로직 테스트 (DB·네트워크 없음)",
    "integration: 리포지토리 + DB 테스트",
    "api: TestClient 엔드포인트 테스트",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/main.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
